--- a/src/WebbenVNext/package.json
+++ b/src/WebbenVNext/package.json
@@ -2,10 +2,19 @@
   "version": "1.0.0",
   "name": "asp.net",
   "private": true,
+  "scripts": {
+    "test": "mocha -r ts-node/register src/**/*.spec.ts --reporter mocha-junit-reporter"
+  },
   "devDependencies": {
-    "typescript": "2.3.4",
+    "@types/chai": "^4.0.0",
+    "@types/mocha": "^2.2.41",
+    "chai": "^4.0.2",
     "gulp": "3.9.1",
     "gulp-typescript": "3.1.7",
-    "gulp-watch": "4.3.11"
+    "gulp-watch": "4.3.11",
+    "mocha": "^3.4.2",
+    "mocha-junit-reporter": "^1.13.0",
+    "ts-node": "^3.0.6",
+    "typescript": "2.3.4"
   }
 }
